syntax = "proto3";

package grpcAvito;
option go_package = "./internal/service/wallet/spec";
//import "google/api/annotations.proto";

message CreateUserRequest {
  uint32 id = 1;
  float balance = 2;
}

message CreateUserResponse {
  bool success = 1;
}

message UserBalanceAccrualRequest {
  uint32 id = 1;
  float balance = 2;
}

message UserBalanceAccrualResponse {
  bool success = 1;
}

message UserOrderReservationRequest {
  uint32 id = 1;
  uint32 serviceId = 2;
  uint32 orderId = 3;
  float cost = 4;
}

message UserOrderReservationResponse {
  bool success = 1;
}

message UserOrderRevenueRequest {
  uint32 id = 1;
  uint32 serviceId = 2;
  uint32 orderId = 3;
  float cost = 4;
}

message UserOrderRevenueResponse {
  bool success = 1;
}

message UserOrderDeleteReservationRequest {
  uint32 id = 1;
  uint32 serviceId = 2;
  uint32 orderId = 3;
  float cost = 4;
}

message UserOrderDeleteReservationResponse {
  bool success = 1;
}

message CreateMonthReportRequest {
  uint32 year = 1;
  uint32 month = 2;
}

message CreateMonthReportResponse {
  bool success = 1;
}

message GetBalanceRequest {
  uint32 id = 1;
}

message GetBalanceResponse {
  uint32 id = 1;
  float balance = 2;
  bool success = 3;
}